Change stream processor from RxJava to Java8 Stream