@@ -1,6 +1,7 @@
-package com.agraph.storage.rdbms.mlae;
+package com.agraph.storage.mlae;
 
 import com.agraph.AGraph;
+import com.agraph.common.util.StreamSupports;
 import com.agraph.core.AGraphProperty;
 import com.agraph.core.AGraphVertexProperty;
 import com.agraph.core.InternalEdge;
@@ -11,27 +12,28 @@ import com.agraph.storage.Mutation;
 import com.agraph.storage.MutationBuilder;
 import com.agraph.storage.RowEntry;
 import com.agraph.storage.rdbms.schema.Argument;
-import io.reactivex.Observable;
-import io.reactivex.ObservableSource;
-import io.reactivex.functions.Function;
 
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Objects;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import static com.agraph.storage.rdbms.mlae.Constants.EDGE_PROPS_TABLE;
-import static com.agraph.storage.rdbms.mlae.Constants.EDGE_TABLE;
-import static com.agraph.storage.rdbms.mlae.Constants.HIDDEN_ID_PROPERTY;
-import static com.agraph.storage.rdbms.mlae.Constants.ID_COL;
-import static com.agraph.storage.rdbms.mlae.Constants.KEY_COL;
-import static com.agraph.storage.rdbms.mlae.Constants.LABEL_COL;
-import static com.agraph.storage.rdbms.mlae.Constants.REF_ID_COL;
-import static com.agraph.storage.rdbms.mlae.Constants.VALUE_COL;
-import static com.agraph.storage.rdbms.mlae.Constants.VERTEX_DST_ID_COL;
-import static com.agraph.storage.rdbms.mlae.Constants.VERTEX_DST_LABEL_COL;
-import static com.agraph.storage.rdbms.mlae.Constants.VERTEX_SRC_ID_COL;
-import static com.agraph.storage.rdbms.mlae.Constants.VERTEX_SRC_LABEL_COL;
-import static com.agraph.storage.rdbms.mlae.Constants.VERTEX_TABLE;
+import static com.agraph.storage.mlae.Constants.EDGE_PROPS_TABLE;
+import static com.agraph.storage.mlae.Constants.EDGE_TABLE;
+import static com.agraph.storage.mlae.Constants.HIDDEN_ID_PROPERTY;
+import static com.agraph.storage.mlae.Constants.ID_COL;
+import static com.agraph.storage.mlae.Constants.KEY_COL;
+import static com.agraph.storage.mlae.Constants.LABEL_COL;
+import static com.agraph.storage.mlae.Constants.REF_ID_COL;
+import static com.agraph.storage.mlae.Constants.VALUE_COL;
+import static com.agraph.storage.mlae.Constants.VERTEX_DST_ID_COL;
+import static com.agraph.storage.mlae.Constants.VERTEX_DST_LABEL_COL;
+import static com.agraph.storage.mlae.Constants.VERTEX_SRC_ID_COL;
+import static com.agraph.storage.mlae.Constants.VERTEX_SRC_LABEL_COL;
+import static com.agraph.storage.mlae.Constants.VERTEX_TABLE;
 
 public class Mutations implements MutationBuilder {
 
@@ -43,17 +45,18 @@ public class Mutations implements MutationBuilder {
 
     @Override
     public Collection<Mutation> fromModifiedVertices(Iterable<InternalVertex> vertices) {
-        return Observable.fromIterable(vertices)
-                .flatMap((Function<InternalVertex, ObservableSource<Mutation>>) vertex
-                        -> Observable.fromIterable(this.modifiedVertexToMutations(vertex)))
-                .toList().blockingGet();
+        return StreamSupports.stream(vertices)
+                .flatMap((Function<InternalVertex, Stream<Mutation>>) vertex
+                        -> this.modifiedVertexToMutations(vertex).stream())
+                .collect(Collectors.toList());
     }
 
     @Override
     public Collection<Mutation> fromRemovedVertices(Iterable<InternalVertex> vertices) {
-        Iterable<RowEntry> entries = Observable.fromIterable(vertices)
-                .map(vertex -> vertexTableEntryBuilder(vertex).build())
-                .blockingIterable();
+        Iterable<RowEntry> entries = StreamSupports.stream(vertices)
+                .filter(Objects::nonNull)
+                .map(vertex -> toEntryBuilder(vertex).build())
+                .collect(Collectors.toList());
 
         return Collections.singletonList(
                 new Mutation(VERTEX_TABLE, Mutation.Action.REMOVE, entries)
@@ -62,23 +65,24 @@ public class Mutations implements MutationBuilder {
 
     @Override
     public Collection<Mutation> fromModifiedEdges(Iterable<InternalEdge> edges) {
-        return Observable.fromIterable(edges)
-                .flatMap((Function<InternalEdge, ObservableSource<Mutation>>) edge
-                        -> Observable.fromIterable(this.modifiedEdgeToMutations(edge)))
-                .toList().blockingGet();
+        return StreamSupports.stream(edges)
+                .flatMap((Function<InternalEdge, Stream<Mutation>>) edge
+                        -> this.modifiedEdgeToMutations(edge).stream())
+                .collect(Collectors.toList());
     }
 
     @Override
     public Collection<Mutation> fromRemovedEdges(Iterable<InternalEdge> edges) {
-        return Observable.fromIterable(edges)
-                .flatMap((Function<InternalEdge, ObservableSource<Mutation>>) edge
-                        -> Observable.fromIterable(this.removedEdgeToMutation(edge)))
-                .toList().blockingGet();
+        return StreamSupports.stream(edges)
+                .flatMap((Function<InternalEdge, Stream<Mutation>>) edge
+                        -> this.removedEdgeToMutation(edge).stream())
+                .collect(Collectors.toList());
     }
 
-    private Iterable<Mutation> modifiedVertexToMutations(InternalVertex vertex) {
+    private Collection<Mutation> modifiedVertexToMutations(InternalVertex vertex) {
         Collection<AGraphProperty<?>> updateProps = vertex.isNew()
-                ? vertex.asPropertiesMap().values() : vertex.modifiedProps();
+                ? vertex.asPropertiesMap().values()
+                : vertex.modifiedProps();
 
         if (vertex.isNew() && vertex.asPropertiesMap().isEmpty()) {
             AGraphVertexProperty<?> hiddenProp = new AGraphVertexProperty<>(
@@ -86,13 +90,13 @@ public class Mutations implements MutationBuilder {
             updateProps.add(hiddenProp);
         }
 
-        Iterable<RowEntry> modifiedEntries = Observable.fromIterable(updateProps)
-                .map(p -> this.vertexTableEntryBuilder(vertex)
+        Iterable<RowEntry> modifiedEntries = updateProps.stream()
+                .map(p -> this.toEntryBuilder(vertex)
                         .addKey(KEY_COL, Argument.of(p.key(), false))
                         .addValue(VALUE_COL, Argument.of(serializer.write(DataType.RAW, p.value())))
                         .build()
                 )
-                .toList().blockingGet();
+                .collect(Collectors.toList());
 
         if (vertex.removedProps().isEmpty()) {
             return Collections.singletonList(
@@ -100,13 +104,13 @@ public class Mutations implements MutationBuilder {
             );
         }
 
-        Iterable<RowEntry> removedEntries = Observable.fromIterable(vertex.removedProps())
-                .map(p -> this.vertexTableEntryBuilder(vertex)
+        Iterable<RowEntry> removedEntries = vertex.removedProps().stream()
+                .map(p -> this.toEntryBuilder(vertex)
                         .addKey(KEY_COL, Argument.of(p.key(), false))
                         .addValue(VALUE_COL, Argument.of(serializer.write(DataType.RAW, p.value())))
                         .build()
                 )
-                .blockingIterable();
+                .collect(Collectors.toList());
 
         return Arrays.asList(
                 new Mutation(VERTEX_TABLE, Mutation.Action.ADD_OR_UPDATE, modifiedEntries),
@@ -114,21 +118,22 @@ public class Mutations implements MutationBuilder {
         );
     }
 
-    private Iterable<Mutation> modifiedEdgeToMutations(InternalEdge edge) {
-        Iterable<AGraphProperty<?>> updateProps = edge.isNew()
-                ? edge.asPropertiesMap().values() : edge.modifiedProps();
+    private Collection<Mutation> modifiedEdgeToMutations(InternalEdge edge) {
+        Collection<AGraphProperty<?>> updateProps = edge.isNew()
+                ? edge.asPropertiesMap().values()
+                : edge.modifiedProps();
 
-        Iterable<RowEntry> modifiedEntries = Observable.fromIterable(updateProps)
+        Iterable<RowEntry> modifiedEntries = updateProps.stream()
                 .map(p -> RowEntry.builder()
                         .addKey(REF_ID_COL, Argument.of(edge.internalId()))
                         .addKey(KEY_COL, Argument.of(p.key(), false))
                         .addValue(VALUE_COL, Argument.of(serializer.write(DataType.RAW, p.value())))
                         .build()
                 )
-                .blockingIterable();
+                .collect(Collectors.toList());
 
         if (edge.isNew()) {
-            RowEntry addEntry = this.edgeTableEntryBuilder(edge)
+            RowEntry addEntry = this.toEntryBuilder(edge)
                     .addValue(REF_ID_COL, Argument.of(edge.internalId()))
                     .build();
 
@@ -144,14 +149,14 @@ public class Mutations implements MutationBuilder {
             );
         }
 
-        Iterable<RowEntry> removedEntries = Observable.fromIterable(edge.removedProps())
+        Iterable<RowEntry> removedEntries = edge.removedProps().stream()
                 .map(p -> RowEntry.builder()
                         .addKey(REF_ID_COL, Argument.of(edge.internalId()))
                         .addKey(KEY_COL, Argument.of(p.key(), false))
                         .addValue(VALUE_COL, Argument.of(serializer.write(DataType.RAW, p.value())))
                         .build()
                 )
-                .blockingIterable();
+                .collect(Collectors.toList());
 
         return Arrays.asList(
                 new Mutation(EDGE_PROPS_TABLE, Mutation.Action.ADD_OR_UPDATE, modifiedEntries),
@@ -159,8 +164,8 @@ public class Mutations implements MutationBuilder {
         );
     }
 
-    private Iterable<Mutation> removedEdgeToMutation(InternalEdge edge) {
-        RowEntry edgeEntry = this.edgeTableEntryBuilder(edge).build();
+    private Collection<Mutation> removedEdgeToMutation(InternalEdge edge) {
+        RowEntry edgeEntry = this.toEntryBuilder(edge).build();
         RowEntry propsEntry = RowEntry.builder()
                 .addKey(REF_ID_COL, Argument.of(edge.internalId())).build();
 
@@ -170,13 +175,13 @@ public class Mutations implements MutationBuilder {
         );
     }
 
-    private RowEntry.Builder vertexTableEntryBuilder(InternalVertex vertex) {
+    private RowEntry.Builder toEntryBuilder(InternalVertex vertex) {
         return RowEntry.builder()
                 .addKey(ID_COL, Argument.of(serializer.write(vertex.id())))
                 .addKey(LABEL_COL, Argument.of(vertex.label(), false));
     }
 
-    private RowEntry.Builder edgeTableEntryBuilder(InternalEdge edge) {
+    private RowEntry.Builder toEntryBuilder(InternalEdge edge) {
         final InternalVertex outV = edge.outVertex();
         final InternalVertex inV = edge.inVertex();
         return RowEntry.builder()
